Fix: overflow fixed

--- a/src/Components/Navbar.scss
+++ b/src/Components/Navbar.scss
@@ -132,7 +132,7 @@
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:800px) {
 
     .navBarItems {
         position: fixed;
